# minekraft

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py
resource/shader/: frag.glsl  vertex.glsl
src/: Block.h  application.cpp  application.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunkBuilder.cpp  chunkBuilder.h  event.cpp  event.h  eventHandler.cpp  eventHandler.h  eventManager.cpp  eventManager.h  iListener.cpp  iListener.h  inputHandler.cpp  inputHandler.h  main.cpp  mesh.h  player.cpp  player.h  renderer.cpp  renderer.h  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  terrainGenerator.cpp  terrainGenerator.h  utility.h  window.cpp  window.h  world.cpp  world.h
